# DesignPatterns

ex0_baseConfiguration/: CMakeLists.txt  main.cpp
ex1_assertion/: CMakeLists.txt  main.cpp
ex1_assertion/Configuration/: Assert.h  SAL.h
ex2_sal/Configuration/: Assert.h
ex3_Sal_attribute/: CMakeLists.txt  main.cpp  utils.cmake
ex3_Sal_attribute/Mk/: DEFINE_ENUM_ERRNO.inl  SymNo32.h  Utility.h
ex3_Sal_attribute/Mk/Core/: Assert.h  NonCopyable.h  Predef.h  Sal.h
ex3_Sal_attribute/Mk/Core/Predef/: Color.h  Namespace.h
ex3_Sal_attribute/Mk/SymNo32/: SymNo32.cpp
ex3_Sal_attribute/Mk/Utility/: Assert.h  No_sal2.h  Predef.h  Sal.h
ex3_Sal_attribute/Mk/Utility/Predef/: Feature.h
ex3_buildTimeOptimization/: CMakeLists.txt
ex4_NonCopyable/: CMakeLists.txt  Readme.md  main.cpp
ex4_NonCopyable/Configuration/: AccessModifier.h  Assert.h  Config.h  CopyableAndMovableTypes.h  SAL.h
ex4_NonCopyable/Mk/: Utility.h
ex4_NonCopyable/Mk/Core/: Assert.h  Predef.h  Sal.h
ex4_NonCopyable/Mk/Core/Predef/: Color.h  Compiler.h  Feature.h  Language.h
ex4_buildTimeOptimization/: main.cpp
